--- a/src/pages/admin/templates/sidebar/styles/admin.templates.sidebar.styles.main.scss
+++ b/src/pages/admin/templates/sidebar/styles/admin.templates.sidebar.styles.main.scss
@@ -94,24 +94,33 @@
         flex: 1;
 
         button {
-          // display: block;
           letter-spacing: 0.5px;
           width: 100%;
           text-align: left;
           cursor: pointer;
-
-          &:not(:nth-child(1)) {
-            margin-top: 3px;
-          }
 
           font-size: 16px;
           border-radius: 0px;
           border: none;
           background: none;
           padding: 3px 7px 3px 7px;
+
           &:hover {
-            background-color: rgb(223, 223, 223);
+            &:not(.Admin-Sidebar-Button-Active) {
+              background-color: rgb(223, 223, 223);
+            }
+            &:is(.Admin-Sidebar-Button-Active) {
+              background-color: rgb(236, 236, 236);
+            }
           }
+
+          &:not(:nth-child(1)) {
+            margin-top: 3px;
+          }
+        }
+
+        .Admin-Sidebar-Button-Active {
+          background-color: rgb(223, 223, 223);
         }
       }
     }
