--- a/src/pages/unauthorized/styles/unauthorized.styles.main.scss
+++ b/src/pages/unauthorized/styles/unauthorized.styles.main.scss
@@ -28,5 +28,17 @@
       line-height: 17px;
       color: rgb(134, 134, 134);
     }
+
+    .Back-Button {
+      outline: none;
+      border: none;
+      color: #eee;
+      background-color: rgb(102, 102, 102);
+      padding: 2px 10px 2px 10px;
+      border-radius: 4px;
+      font-size: 14px;
+      cursor: pointer;
+      margin-top: 10px;
+    }
   }
 }
