--- a/src/components/loading/styles/components.loading.styles.main.scss
+++ b/src/components/loading/styles/components.loading.styles.main.scss
@@ -17,6 +17,8 @@
   top: 0px;
   z-index: 3;
 
+  background-color: #000000;
+
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
